Update CompilerController to use Judge0 API